<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".ui.user.search.SearchUserFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_search_user_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#f7f7f7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/fragment_search_user_empty_list_image"
            android:layout_width="@dimen/info_image"
            android:layout_height="@dimen/info_image"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            android:tint="@color/colorGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/fragment_search_user_empty_list_title"
            app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:id="@+id/fragment_search_user_empty_list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_search_user_empty_list_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fragment_search_user_empty_list_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.5"
            tools:text="Aïe, il semblerait qu'il y ait une erreur technique"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>
    <Button
            android:id="@+id/fragment_search_user_empty_list_button"
            android:text="@string/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_search_user_empty_list_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <ProgressBar
            android:id="@+id/fragment_search_user_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_filter_list_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" android:id="@+id/fragment_search_user_fab"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>