<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:id="@+id/item_search_user_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_search_user_image_profile"
                android:textColor="@color/colorGray"
                android:textSize="16sp" tools:text="Your name " android:fontFamily="sans-serif-black"/>

        <ImageView
                android:id="@+id/item_search_user_image_profile"
                android:layout_width="@dimen/avatar"
                android:layout_height="@dimen/avatar"
                tools:srcCompat="@tools:sample/avatars"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_star_white_24dp"
                android:tint="@color/colorGray"
                app:layout_constraintTop_toTopOf="@+id/item_search_user_repositories"
                app:layout_constraintBottom_toBottomOf="@+id/item_search_user_repositories"
                app:layout_constraintStart_toStartOf="@+id/item_search_user_title"/>

        <TextView
                android:id="@+id/item_search_user_repositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100,2 - 5 repositories"
                android:textColor="@color/colorGray"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/item_search_user_title"
                app:layout_constraintStart_toEndOf="@+id/imageView2" android:fontFamily="sans-serif-light"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/item_search_user_repositories"
                app:layout_constraintStart_toStartOf="@+id/item_search_user_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorGray"
                android:text="@string/followed_by"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"/>

        <ImageView
                android:id="@+id/item_search_user_follower_image"
                android:layout_width="@dimen/avatar_small"
                android:layout_height="@dimen/avatar_small"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                android:layout_marginStart="4dp"/>

        <TextView
                android:id="@+id/item_search_user_follower_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/item_search_user_follower_image"
                app:layout_constraintBottom_toBottomOf="@+id/item_search_user_follower_image"
                app:layout_constraintStart_toEndOf="@+id/item_search_user_follower_image"
                android:layout_marginStart="12dp"
                android:textColor="@android:color/black"
                android:textAlignment="textStart" tools:text="first follower" android:fontFamily="sans-serif-light"
                android:textStyle="italic"/>

        <TextView
                android:id="@+id/item_search_user_follower_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_search_user_follower_name"
                app:layout_constraintBottom_toBottomOf="@+id/item_search_user_follower_name"
                app:layout_constraintStart_toEndOf="@+id/item_search_user_follower_name"
                tools:text="+2"
                android:textColor="@android:color/black"
                android:textAlignment="textStart"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="16dp" android:fontFamily="sans-serif-medium" android:textStyle="italic"/>

        <ImageView
                android:id="@+id/item_search_user_follower_image_bis"
                android:layout_width="@dimen/avatar_small"
                android:layout_height="@dimen/avatar_small"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="@+id/item_search_user_follower_image"
                app:layout_constraintBottom_toBottomOf="@+id/item_search_user_follower_image"
                app:layout_constraintStart_toStartOf="@+id/item_search_user_follower_image"
                android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>